Updated linking of various parts

--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,11 @@
     font-size: 30px;
     font-weight: bold;
 }
+#aboutPizza{
+    font-size: 30px;
+    font-weight: bold; 
+}
+#pizzaTypes{
+    font-size: 30px;
+    font-weight: bold; 
+}
